--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Campus Buys",
   "short_name": "Campus Buys",
-  "start_url": "./index.html",
+  "id": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0f0f1a",
   "theme_color": "#0f0f1a",
@@ -19,4 +20,3 @@
     }
   ]
 }
-
